# fundcloud

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  codecov.yml  mkdocs.yml  pyproject.toml  release-please-config.json  versions.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  docs.yml  release-please.yml  release.yml
0.3/: objects.inv  sitemap.xml
0.3/guides/plots/: index.html
0.3/guides/using-python-help/: index.html
0.3/install/: index.html
0.3/quickstart/: index.html
0.3/reference/accounts/: index.html
0.3/reference/data/: index.html
0.3/reference/errors/: index.html
0.3/reference/kernels/: index.html
0.3/reference/metrics/: index.html
0.3/reference/plots/: index.html
0.3/reference/portfolio/: index.html
0.3/reference/reports/: index.html
0.3/reference/sim/: index.html
0.3/reference/strategies/: index.html
0.3/search/: search_index.json
0.4/: 404.html  index.html  objects.inv  sitemap.xml
0.4/guides/plots/: index.html
0.4/guides/using-python-help/: index.html
0.4/reference/data/: index.html
0.4/reference/metrics/: index.html
0.4/reference/optimize/: index.html
0.4/reference/portfolio/: index.html
0.4/reference/sim/: index.html
0.4/reference/strategies/: index.html
0.4/reference/validate/: index.html
0.4/search/: search_index.json
0.5/: index.html  objects.inv  sitemap.xml
0.5/install/: index.html
0.5/reference/data/: index.html
0.5/reference/kernels/: index.html
0.5/reference/optimize/: index.html
0.5/reference/sim/: index.html
0.5/search/: search_index.json
0.6/: 404.html  sitemap.xml
0.6/guides/plots/: index.html
0.6/quickstart/: index.html
0.6/reference/patterns/: index.html
0.6/reference/plots/: index.html
0.6/reference/portfolio/: index.html
0.6/scoring/quality/: index.html
0.7/: sitemap.xml
0.7/guides/using-python-help/: index.html
0.7/javascripts/: extra.js
0.7/reference/accounts/: index.html
0.7/reference/errors/: index.html
0.7/reference/metrics/: index.html
0.7/reference/patterns/: index.html
0.7/reference/reports/: index.html
0.7/reference/strategies/: index.html
0.7/reference/validate/: index.html
0.7/scoring/quality/: index.html
0.7/search/: search_index.json
bench/: bench_sim.py  kernels_bench.py
crates/fundcloud-core/: Cargo.toml
crates/fundcloud-core/src/: drawdown.rs  lib.rs  moments.rs  returns.rs  rolling.rs  sim.rs  tail_risk.rs
crates/fundcloud-core/src/patterns/: detect.rs  mod.rs  pivots.rs  scoring.rs  trendline.rs  types.rs
crates/fundcloud-core/src/patterns/detectors/: double.rs  head_shoulders.rs  mod.rs  triangles.rs  triple.rs
crates/fundcloud-core/tests/: canonical_quality.rs
crates/fundcloud-py/: Cargo.toml
crates/fundcloud-py/src/: lib.rs
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/guides/plots/: index.html
dev/guides/using-python-help/: index.html
dev/install/: index.html
dev/quickstart/: index.html
dev/reference/data/: index.html
dev/search/: search_index.json
docs/: index.md  install.md  quickstart.md
docs/decisions/: scorer-calibration-history.md
docs/guides/: using-python-help.md
docs/overrides/: main.html
docs/reference/: accounts.md  data.md  errors.md  kernels.md  metrics.md  optimize.md  patterns.md  plots.md  portfolio.md  reports.md  sim.md  strategies.md  validate.md
docs/scoring/: quality.md
docs/stylesheets/: extra.css
examples/: 01_dca_weekly_spy.py  02_dca_vs_lump_sum.py  03_sixty_forty_rebalance.py  04_hrp_vs_equal_weight.py  05_golden_cross_momentum.py  06_walk_forward_optimization.py  07_live_spy_dca.py  08_dca_amount_pct.py  08_live_cross_asset.py  09_live_market_snapshot.py  10_pandas_accessor_quickstart.py  11_investment_horizon.py  12_efficient_frontier.py  13_min_cvar_vs_min_variance.py  14_transaction_costs.py  15_black_litterman.py  16_talib_feature_matrix.py  17_local_data_pipeline.py  18_report_pack_pdf_excel.py  19_advanced_optimisers.py  20_signals_and_orders.py  21_cost_model_lab.py  22_eda_native.py  23_cv_zoo.py  24_attribution_and_kernels.py  25_plots_summary.py  26_plots_theming.py  27_benchmark_comparison.py  28_period_yearly_drawdowns.py  29_fundcloud_accounts.py  30_ib_flex_csv.py  31_clickhouse_data_source.py  31_head_and_shoulders_detection.py  32_pattern_scan_real_data.py  33_pattern_strategy_backtest.py  34_pattern_leaderboard.py  35_pattern_visualization.py  36_configurable_pattern_scan.py  36_full_flow_demo.py  README.md  (+2 more)
python/fundcloud/: __init__.py  _benchmark.py  _config.py  _version.py  errors.py
scripts/scoring/: .gitignore  README.md  calibrate.py  calibration_interim_n60.json  calibration_v1_2_n69.json  rate.py  ratings.csv  ratings_v1_2.csv  sample_for_rating.py
tests/: conftest.py  test_docs_snippets.py
tests/integration/: conftest.py  test_clickhouse_docker.py  test_clickhouse_live.py  test_fundcloud_live.py  test_live_sources.py
tests/unit/: test_accessors.py  test_accounts_extra_coverage.py  test_accounts_flex.py  test_accounts_fundcloud.py  test_accounts_ib.py  test_backends_local.py  test_backends_network.py  test_backends_writable.py  test_bars.py  test_base_backend.py  test_catalog.py  test_columns.py  test_config.py  test_data_backends.py  test_data_clickhouse.py  test_data_fundcloud.py  test_data_local_stores.py  test_datasets.py  test_defaults.py  test_explore.py  test_feature_quality.py  test_features_pipeline.py  test_features_store.py  test_indicators.py  test_kernels.py  test_kernels_parity.py  test_metrics_batch.py  test_metrics_core.py  test_metrics_extended.py  test_metrics_periods.py  test_metrics_rolling.py  test_optimize_adapters.py  test_optimize_fallback.py  test_pattern_accessor.py  test_pattern_apply_condition_edges.py  test_pattern_condition.py  test_pattern_detector_params.py  test_pattern_direction_map.py  test_pattern_events.py  test_pattern_plots.py  (+29 more)
(+222 files in other folders)
