[package]
name = "fundcloud-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Numerical kernels for Fundcloud. No Python dependency."

[lib]
name = "fundcloud_core"

[dependencies]
ndarray = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
