[package]
name = "fundcloud-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "PyO3 bindings for fundcloud-core."

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
fundcloud-core = { path = "../fundcloud-core" }
pyo3 = { workspace = true, features = ["extension-module", "abi3-py310"] }
numpy = { workspace = true }
ndarray = { workspace = true }
